style(image-text): added extra margin to correct image outlining

--- a/components/image-combo/image-combo.less
+++ b/components/image-combo/image-combo.less
@@ -30,7 +30,8 @@
 		margin-top: -60px;
 
 		@media @screen-medium {
-			margin-top: -120px;
+			// margin-top: -120px;
+			margin-top: -300px;
 		}
 	}
 }
