--- a/styles/typography.less
+++ b/styles/typography.less
@@ -18,7 +18,10 @@ h1 {
 
 h2 {
     font-size: @title-medium-l;
-    line-height: 60px;
+    line-height: 36px;
+    @media @screen-small {
+        line-height: 60px;
+    }
 }
 
 h3 {
